# pyannote-rs

./: Cargo.toml  README.md  re_exp2.py
examples/: infinite.rs  max_speakers.rs  save_segments.rs
src/: embedding.rs  identify.rs  lib.rs  segment.rs  session.rs
src/nn/: mod.rs
src/nn/segmentation/: model.rs
src/nn/speaker_identification/: model.rs
