[package]
name = "pyannote-rs"
version = "0.3.4"
edition = "2021"
license = "MIT"
description = "Speaker diarization using pyannote in Rust"
repository = "https://github.com/thewh1teagle/pyannote-rs"

[dependencies]
eyre = "0.6.12"
hound = "3.5.1"
kaldi-native-fbank = "0.1.0"
ndarray = "0.17"
ort = { version = "2.0.0-rc.11", features = ["ndarray"] }

[features]
default = []
coreml = ["ort/coreml"]
directml = ["ort/directml"]
load-dynamic = ["ort/load-dynamic"]

[[example]]
name = "max_speakers"

[[example]]
name = "infinite"
